--- a/lib/at-grid.html
+++ b/lib/at-grid.html
@@ -27,7 +27,21 @@
       >
         <td *ngFor="let column of metaData"
             class="base_row_td">
-          {{item[column.name]}}
+          <div *ngIf="column.columnFormat == columnFormat.Number" align="right">
+            {{item[column.name]|number}}
+          </div>
+          <div *ngIf="column.columnFormat == columnFormat.Currency" align="right">
+            {{item[column.name]|number:'1.2-2'}}
+          </div>
+          <div *ngIf="column.columnFormat == columnFormat.Date">
+            {{item[column.name]|date:'dd.MM.yyyy'}}
+          </div>
+          <div *ngIf="column.columnFormat == columnFormat.Default">
+            {{item[column.name]}}
+          </div>
+          <div *ngIf="column.columnFormat == columnFormat.Boolean">
+            <input type="checkbox" [(ngModel)]="item[column.name]" [id]="'col_' + column.name + '_' + idx" [name]="'col_' + column.name + '_' + idx"/>
+          </div>
         </td>
       </tr>
     </tbody>
