--- a/lib/at-grid.html
+++ b/lib/at-grid.html
@@ -1,57 +1,61 @@
 <form name="form" id="form" #myForm="ngForm">
-  <table width="100%" style="width:100%" border="1" class="at-table">
-    <thead>
-      <tr class="base_header_tr">
-        <td *ngFor="let column of metaData"
-            class="base_header_td">
-          <b>{{column.comment}}</b>
-        </td>
-      </tr>
-      <tr>
-        <td *ngFor="let column of metaData">
-          <input type="text" [name]="column.name" [id]="column.name" [(ngModel)]="column.filterInfo.value" (ngModelChange)="filterChanged($event)">
-        </td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of getRowForPage(); let idx = index"
-          [ngClass]="{ 'even_row': (idx % 2 == 0) && rowNumMouseOver != idx,
-           'uneven_row': (idx % 2 == 1) && rowNumMouseOver != idx,
-           'even_row_mouse_over': (idx % 2 == 0) && rowNumMouseOver == idx,
-           'uneven_row_mouse_over': (idx % 2 == 1) && rowNumMouseOver == idx
-           }"
-          class="base_row_tr"
-          (click)="selectRow(item)"
-          (mouseleave)="mouseOver(null)"
-          (mouseover)="mouseOver(idx)"
-      >
-        <td *ngFor="let column of metaData"
-            class="base_row_td" [ngStyle] = "callbackSetCellStyle(item, column)">
-          <div *ngIf="column.columnFormat == columnFormat.Number" align="right">
-            {{item[column.name]|number}}
-          </div>
-          <div *ngIf="column.columnFormat == columnFormat.Currency" align="right">
-            {{item[column.name]|number:'1.2-2'}}
-          </div>
-          <div *ngIf="column.columnFormat == columnFormat.Date">
-            {{item[column.name]|date:'dd.MM.yyyy'}}
-          </div>
-          <div *ngIf="column.columnFormat == columnFormat.Default">
-            {{item[column.name]}}
-          </div>
-          <div *ngIf="column.columnFormat == columnFormat.Boolean">
-            <input type="checkbox" [(ngModel)]="item[column.name]" [id]="'col_' + column.name + '_' + idx" [name]="'col_' + column.name + '_' + idx"/>
-          </div>
-          <div *ngIf="column.columnFormat == columnFormat.Picture && item[column.name] != null">
-            <img [width]="imageSize" [height]="imageSize" [src]="item[column.name] | safeHtml" />
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <button (click)="firstPage()" type="button"> << </button>
-  <button (click)="prevPage()" type="button"> < </button>
-  {{getHumanCurrentPage()}} из {{getQuPage()}}
-  <button (click)="nextPage()" type="button"> > </button>
-  <button (click)="lastPage()" type="button"> >> </button>
+    <table width="100%" style="width:100%" border="1" class="at-table">
+        <thead>
+            <tr class="base_header_tr">
+                <td *ngFor="let column of metaData"
+                    class="base_header_td">
+                  <b>{{column.comment}}</b>
+                </td>
+            </tr>
+            <tr>
+                <td *ngFor="let column of metaData">
+                    <input type="text" [name]="column.name" [id]="column.name" [(ngModel)]="column.filterInfo.value" (ngModelChange)="filterChanged($event)">
+                </td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of getRowForPage(); let idx = index"
+                [ngClass]="{ 'even_row': (idx % 2 == 0) && rowNumMouseOver != idx,
+                    'uneven_row': (idx % 2 == 1) && rowNumMouseOver != idx,
+                    'even_row_mouse_over': (idx % 2 == 0) && rowNumMouseOver == idx,
+                    'uneven_row_mouse_over': (idx % 2 == 1) && rowNumMouseOver == idx
+                }"
+                class="base_row_tr"
+                (click)="selectRow(item)"
+                (mouseleave)="mouseOver(null)"
+                (mouseover)="mouseOver(idx)"
+            >
+                <td *ngFor="let column of metaData; let colNum = index"
+                    class="base_row_td" [ngStyle] = "callbackSetCellStyle(item, column)">
+                    <div *ngIf="column.columnFormat == columnFormat.Number" align="right" [id]="getCellId(idx, colNum)">
+                        {{item[column.name]|number}}
+                    </div>
+                    <div *ngIf="column.columnFormat == columnFormat.Currency" align="right" [id]="getCellId(idx, colNum)">
+                        {{item[column.name]|number:'1.2-2'}}
+                    </div>
+                    <div *ngIf="column.columnFormat == columnFormat.Date" [id]="getCellId(idx, colNum)">
+                        {{item[column.name]|date:'dd.MM.yyyy'}}
+                    </div>
+                    <div *ngIf="column.columnFormat == columnFormat.Default" [id]="getCellId(idx, colNum)">
+                        {{item[column.name]}}
+                    </div>
+                    <div *ngIf="column.columnFormat == columnFormat.Boolean" [id]="getCellId(idx, colNum)">
+                        <input type="checkbox" [(ngModel)]="item[column.name]" [id]="'col_' + column.name + '_' + idx" [name]="'col_' + column.name + '_' + idx"/>
+                    </div>
+                    <div *ngIf="column.columnFormat == columnFormat.Picture && item[column.name] != null" [id]="getCellId(idx, colNum)">
+                        <img [width]="imageSize" [height]="imageSize" [src]="item[column.name] | safeHtml" />
+                    </div>
+                    <div *ngIf="column.columnFormat == columnFormat.HTML && item[column.name] != null" [id]="getCellId(idx, colNum)" #mydiv>
+
+
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <button (click)="firstPage()" type="button"> << </button>
+    <button (click)="prevPage()" type="button"> < </button>
+    {{getHumanCurrentPage()}} из {{getQuPage()}}
+    <button (click)="nextPage()" type="button"> > </button>
+    <button (click)="lastPage()" type="button"> >> </button>
 </form>
