--- a/lib/at-grid.html
+++ b/lib/at-grid.html
@@ -9,7 +9,12 @@
             </tr>
             <tr>
                 <td *ngFor="let column of metaData">
-                    <input type="text" [name]="column.name" [id]="column.name" [(ngModel)]="column.filterInfo.value" (ngModelChange)="filterChanged($event)">
+                    <input
+                            type="text"
+                            [name]="column.name"
+                            [id]="column.name"
+                            [(ngModel)]="column.filterInfo.value"
+                            (ngModelChange)="filterChanged($event)"/>
                 </td>
             </tr>
         </thead>
@@ -48,6 +53,7 @@
                                             }"
                                [(ngModel)]="item[column.name]"
                                (change)="changedCell({columnInfo: column, value: item})"
+                               (click)="$event.stopPropagation()"
                         />
                     </div>
 
@@ -67,6 +73,7 @@
                                             }"
                                [(ngModel)]="item[column.name]"
                                (change)="changedCell({columnInfo: column, value: item})"
+                               (click)="$event.stopPropagation()"
                         />
                     </div>
 
@@ -75,7 +82,8 @@
                         {{item[column.name]|date:'dd.MM.yyyy'}}
                     </div>
                     <div *ngIf="column.columnFormat == columnFormat.Date && isAllowEdit(idx, column)"
-                         [id]="getCellId(idx, colNum)" style="height: 100%">
+                         [id]="getCellId(idx, colNum)" style="height: 100%"
+                         (click)="$event.stopPropagation()">
                         <input type="date"  [name]="'input' + getCellId(idx, colNum)"
                                [id]="'input' + getCellId(idx, colNum)"
                                style="border: none;"
@@ -87,6 +95,29 @@
                                [ngModel]="item[column.name] | date:'yyyy-MM-dd'"
                                (ngModelChange)="item[column.name] = $event"
                                (change)="changedCell({columnInfo: column, value: item})"
+                               (click)="$event.stopPropagation()"
+                        />
+                    </div>
+
+                    <div *ngIf="column.columnFormat == columnFormat.Datetime && !isAllowEdit(idx, column)"
+                         [id]="getCellId(idx, colNum)" style="height: 100%">
+                        {{item[column.name]|date:'dd.MM.yyyy hh:mm'}}
+                    </div>
+                    <div *ngIf="column.columnFormat == columnFormat.Datetime && isAllowEdit(idx, column)"
+                         [id]="getCellId(idx, colNum)" style="height: 100%"
+                         (click)="$event.stopPropagation()">
+                        <input type="datetime-local"  [name]="'input' + getCellId(idx, colNum)"
+                               [id]="'input' + getCellId(idx, colNum)"
+                               style="border: none;"
+                               [ngClass]="{ 'even_row': (idx % 2 == 0) && rowNumMouseOver != idx,
+                                            'uneven_row': (idx % 2 == 1) && rowNumMouseOver != idx,
+                                            'even_row_mouse_over': (idx % 2 == 0) && rowNumMouseOver == idx,
+                                            'uneven_row_mouse_over': (idx % 2 == 1) && rowNumMouseOver == idx
+                                            }"
+                               [ngModel]="item[column.name] | date:'yyyy-MM-ddThh:mm'"
+                               (ngModelChange)="setDatetime(item, column, $event)"
+                               (change)="changedCell({columnInfo: column, value: item})"
+                               (click)="$event.stopPropagation()"
                         />
                     </div>
 
@@ -108,6 +139,7 @@
                                             }"
                                [(ngModel)]="item[column.name]"
                                (change)="changedCell({columnInfo: column, value: item})"
+                               (click)="$event.stopPropagation()"
                         />
                     </div>
 
